fix: Update test command to use 'zig build test' for consistency in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
         run: zig build
 
       - name: Run tests
-        run: zig test src/game
+        run: zig build test
 
       - name: Upload built binary
         if: success()
