--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,10 +83,11 @@ jobs:
           path: ./artifacts
 
       - name: Create GitHub Release and upload binaries
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1
         with:
-          tag_name: v${{ github.run_number }}
+          tag: v${{ github.run_number }}
           name: Release ${{ github.run_number }}
           files: ./artifacts/**
+          overwrite: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
