fix: Update release action parameters to use 'artifacts' and 'makeLatest' options

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
           tag: ${{ env.RELEASE_TAG }}
           name: Release ${{ env.RELEASE_TAG }}
           # Upload only files that look like our built binaries (T21...)
-          files: ./artifacts/**/T21*
-          overwrite: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          artifacts: |
+            ./artifacts/**/T21*
+          makeLatest: true
+          token: ${{ secrets.GITHUB_TOKEN }}
