fix: Add paths to push and pull_request triggers in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,17 @@ name: CI
 
 on:
   push:
+    paths:
+      - 'src/**'
+      - 'build.zig'
+      - '.github/workflows/ci.yml'
+      - 'build.zig.zon'
   pull_request:
+    paths:
+      - 'src/**'
+      - 'build.zig'
+      - '.github/workflows/ci.yml'
+      - 'build.zig.zon'
 
 permissions:
   contents: write
