--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI (versioned)
 
 on:
   push:
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   build:
-    name: Build & Test on ${{ matrix.os }}
+    name: Build & Package on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     env:
       ZIG_VERSION: 0.15.2
@@ -32,6 +32,20 @@ jobs:
 
       - name: Set Zig version
         run: echo "ZIG_VERSION=0.15.2" >> $GITHUB_ENV
+
+      - name: Compute RELEASE_VERSION (0.1.<count-from-0>)
+        id: compute_release
+        run: |
+          set -e
+          GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          SHORT_SHA=${GITHUB_SHA:0:7}
+          # count existing releases; this is zero-based (0 -> 0.1.0)
+          RELEASE_COUNT=$(curl -s -H "Authorization: token ${GH_TOKEN}" "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases?per_page=100" | grep -c '"id":')
+          RELEASE_VERSION="0.1.${RELEASE_COUNT}"
+          echo "RELEASE_COUNT=${RELEASE_COUNT}"
+          echo "RELEASE_VERSION=${RELEASE_VERSION}"
+          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
+          echo "SHORT_SHA=${SHORT_SHA}" >> $GITHUB_ENV
 
       - name: Download and extract Zig (Linux)
         if: runner.os == 'Linux'
@@ -57,77 +71,78 @@ jobs:
             TAR=zig-x86_64-macos-${Z}.tar.xz
           fi
           URL=https://ziglang.org/download/${Z}/${TAR}
-          echo "Downloading $URL"
           curl -fsSL -o $TAR $URL
           tar -xJf $TAR
           DIR=$(tar -tf $TAR | head -1 | cut -f1 -d"/")
           echo "${PWD}/${DIR}" >> $GITHUB_PATH
 
       - name: Print Zig version
-        run: zig version
+        run: zig version || true
 
       - name: Build
         run: zig build
 
-      - name: Rename binary to include OS and short SHA
+      - name: Rename binary to include OS, version and sha
         shell: bash
         run: |
           set -e
           BIN=zig-out/bin/T21
-          if [ -f "$BIN" ]; then
-            SHORT_SHA=${GITHUB_SHA:0:7}
-            # normalize os label to short name
-            OS_LABEL=${{ matrix.os }}
-            OS_LABEL=${OS_LABEL//ubuntu-latest/linux}
-            OS_LABEL=${OS_LABEL//macos-latest/macos}
-            OUT="zig-out/bin/T21-${OS_LABEL}-${SHORT_SHA}"
-            echo "Renaming $BIN -> $OUT"
-            mv "$BIN" "$OUT"
-          else
-            echo "Binary not found at $BIN, skipping rename"
+          if [ ! -f "$BIN" ]; then
+            echo "No built binary at $BIN, skipping rename"
+            exit 0
           fi
+          OS_LABEL=${{ matrix.os }}
+          OS_LABEL=${OS_LABEL//ubuntu-latest/linux}
+          OS_LABEL=${OS_LABEL//macos-latest/macos}
+          SHORT_SHA=${SHORT_SHA:-${GITHUB_SHA:0:7}}
+          RELEASE_VERSION=${RELEASE_VERSION:-0.1.0}
+          OUT=zig-out/bin/T21-${OS_LABEL}-${RELEASE_VERSION}-${SHORT_SHA}
+          echo "Renaming $BIN -> $OUT"
+          mv "$BIN" "$OUT"
 
       - name: Show built binaries
         run: ls -la zig-out/bin || true
 
-      - name: Build .dmg package (macOS)
+      - name: Build .dmg (macOS)
         if: runner.os == 'macOS'
         shell: bash
         run: |
           set -e
-          SHORT_SHA=${GITHUB_SHA:0:7}
-          BIN_PATH=$(ls zig-out/bin/T21-macos-* 2>/dev/null | head -n1 || true)
+          SHORT_SHA=${SHORT_SHA:-${GITHUB_SHA:0:7}}
+          RELEASE_VERSION=${RELEASE_VERSION:-0.1.0}
+          BIN_PATH=$(ls zig-out/bin/T21-macos-${RELEASE_VERSION}-* 2>/dev/null | head -n1 || true)
           if [ -z "$BIN_PATH" ]; then
-            echo "No macOS binary found to package, skipping .dmg"
+            echo "No macOS binary for ${RELEASE_VERSION}, skipping dmg"
             exit 0
           fi
           rm -rf dmg-root
           mkdir -p dmg-root
           cp "$BIN_PATH" dmg-root/T21
           chmod 0755 dmg-root/T21
-          DMG_NAME="T21-macos-${SHORT_SHA}.dmg"
+          DMG_NAME=T21-macos-${RELEASE_VERSION}-${SHORT_SHA}.dmg
           echo "Creating $DMG_NAME"
           hdiutil create -srcfolder dmg-root -volname "T21" -ov -format UDZO "$DMG_NAME"
           mv "$DMG_NAME" zig-out/bin/
 
-      - name: Build .deb package (Linux)
+      - name: Build .deb (Linux)
         if: runner.os == 'Linux'
         shell: bash
         run: |
           set -e
-          SHORT_SHA=${GITHUB_SHA:0:7}
-          mkdir -p pkg/DEBIAN pkg/usr/bin
-          BIN_PATH=$(ls zig-out/bin/T21-linux-* 2>/dev/null | head -n1 || true)
+          SHORT_SHA=${SHORT_SHA:-${GITHUB_SHA:0:7}}
+          RELEASE_VERSION=${RELEASE_VERSION:-0.1.0}
+          BIN_PATH=$(ls zig-out/bin/T21-linux-${RELEASE_VERSION}-* 2>/dev/null | head -n1 || true)
           if [ -z "$BIN_PATH" ]; then
-            echo "No linux binary found to package, skipping .deb"
+            echo "No linux binary for ${RELEASE_VERSION}, skipping deb"
             exit 0
           fi
+          mkdir -p pkg/DEBIAN pkg/usr/bin
           cp "$BIN_PATH" pkg/usr/bin/T21
           chmod 0755 pkg/usr/bin/T21
-          DEB_NAME="T21-linux-${SHORT_SHA}.deb"
+          DEB_NAME=T21-linux-${RELEASE_VERSION}-${SHORT_SHA}.deb
           printf '%s\n' \
             "Package: T21" \
-            "Version: 0.0.0+${SHORT_SHA}" \
+            "Version: ${RELEASE_VERSION}+${SHORT_SHA}" \
             "Section: games" \
             "Priority: optional" \
             "Architecture: amd64" \
@@ -137,58 +152,48 @@ jobs:
           dpkg-deb --build pkg "$DEB_NAME"
           mv "$DEB_NAME" zig-out/bin/
 
-      - name: Upload built binary
-        if: success()
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
+        if: success()
         with:
-          name: T21-${{ matrix.os }}
+          name: T21-${{ matrix.os }}-${{ env.RELEASE_VERSION }}
           path: |
             zig-out/bin/*
 
   release:
-    name: Create GitHub Release and upload artifacts
+    name: Create Release (versioned)
     runs-on: ubuntu-latest
     needs: build
     if: needs.build.result == 'success' && github.ref == 'refs/heads/master'
     steps:
-      - name: Download all job artifacts
+      - name: Download job artifacts
         uses: actions/download-artifact@v4
         with:
           path: ./artifacts
 
-      - name: List downloaded artifacts (diagnostic)
-        run: |
-          echo "Artifacts directory contents:"
-          ls -laR ./artifacts || true
+      - name: Show artifacts (diagnostic)
+        run: ls -laR ./artifacts || true
 
-      - name: Compute release tag from artifacts
-        shell: bash
+      - name: Compute authoritative RELEASE_VERSION and tag
+        id: compute_release2
         run: |
           set -e
+          GH_TOKEN="${{ secrets.GITHUB_TOKEN }}"
           SHORT_SHA=${GITHUB_SHA:0:7}
-          HAS_LINUX=0
-          HAS_MACOS=0
-          # match one-level artifact directories created by actions/download-artifact
-          if ls ./artifacts/*/T21*linux* 1> /dev/null 2>&1; then HAS_LINUX=1; fi
-          if ls ./artifacts/*/T21*macos* 1> /dev/null 2>&1; then HAS_MACOS=1; fi
-          if [ "$HAS_LINUX" = "1" ] && [ "$HAS_MACOS" = "1" ]; then
-            OS_LABEL="linux-macos"
-          elif [ "$HAS_LINUX" = "1" ]; then
-            OS_LABEL="linux"
-          elif [ "$HAS_MACOS" = "1" ]; then
-            OS_LABEL="macos"
-          else
-            OS_LABEL="unknown"
-          fi
-          RELEASE_TAG="T21-${OS_LABEL}-${SHORT_SHA}"
-          echo "Computed RELEASE_TAG=$RELEASE_TAG"
-          echo "RELEASE_TAG=$RELEASE_TAG" >> $GITHUB_ENV
+          RELEASE_COUNT=$(curl -s -H "Authorization: token ${GH_TOKEN}" "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases?per_page=100" | grep -c '"id":')
+          RELEASE_VERSION="0.1.${RELEASE_COUNT}"
+          RELEASE_TAG="v${RELEASE_VERSION}"
+          RELEASE_NAME="T21 ${RELEASE_VERSION} (sha:${SHORT_SHA})"
+          echo "RELEASE_VERSION=${RELEASE_VERSION}" >> $GITHUB_ENV
+          echo "RELEASE_TAG=${RELEASE_TAG}" >> $GITHUB_ENV
+          echo "RELEASE_NAME=${RELEASE_NAME}" >> $GITHUB_ENV
+          echo "Computed RELEASE_VERSION=${RELEASE_VERSION} (existing releases: ${RELEASE_COUNT})"
 
-      - name: Create GitHub Release and upload binaries
+      - name: Create GitHub Release and attach artifacts
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ env.RELEASE_TAG }}
-          name: Release ${{ env.RELEASE_TAG }}
+          name: ${{ env.RELEASE_NAME }}
           artifacts: |
             ./artifacts/*/T21*
           makeLatest: true
