fix: Update CI workflow paths to use the general .github/ directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,13 @@ on:
     paths:
       - 'src/**'
       - 'build.zig'
-      - '.github/workflows/ci.yml'
+      - '.github/'
       - 'build.zig.zon'
   pull_request:
     paths:
       - 'src/**'
       - 'build.zig'
-      - '.github/workflows/ci.yml'
+      - '.github/'
       - 'build.zig.zon'
 
 permissions:
