--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,15 @@ on:
     paths:
       - 'src/**'
       - 'build.zig'
-      - '.github/'
+      - '.github/**'
+      - '.github/woekflows/**'
       - 'build.zig.zon'
   pull_request:
     paths:
       - 'src/**'
       - 'build.zig'
-      - '.github/'
+      - '.github/**'
+      - '.github/woekflows/**'
       - 'build.zig.zon'
 
 permissions:
