--- a/.github/PKGBUILD
+++ b/.github/PKGBUILD
@@ -8,7 +8,7 @@ url="https://github.com/REPLACE_WITH_GITHUB_USER/${pkgname}"
 license=('GPL-2.0-only')
 depends=()
 makedepends=('zig' 'git')
-source=("https://github.com/REPLACE_WITH_GITHUB_USER/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
+source=("https://github.com/monico18/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('SKIP') # replace with real checksum for release packaging
 
 build() {
